--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <!-- Cards -->
       <div class="cardContainer">
 
-        <div class="box">
+        <!-- <div class="box">
           <div class="imgBox">
             <img src="img/movie.png" alt="Movie Search Screenshot">
           </div>
@@ -78,7 +78,7 @@
               <a href="https://github.com/imranabash/MovieSearch" target="_blank"><button class="projectBtn">View Repo</button></a>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="box">
           <div class="imgBox">
@@ -108,7 +108,7 @@
           </div>
         </div>
 
-        <div class="box">
+        <!-- <div class="box">
           <div class="imgBox">
             <img src="img/pokedex.png" alt="Pokedex Screenshot">
           </div>
@@ -121,7 +121,7 @@
                <a href="https://github.com/imranabash/pokedex-master" target="_blank"><button class="projectBtn">View Repo</button></a>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </section>
