--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       <div class="contactContainer">
         <div id="linksContainer">
           <a href="" id="linkedInLink" target="_blank"><i class="fab fa-linkedin fa-3x" id="linkedInIcon" area-hidden="true"></i></a>
-          <a href="https://github.com/ranbash" id="gitHubLink" target="_blank"><i class="fab fa-github fa-3x" id="gitHubIcon" area-hidden="true"></i></a>
+          <a href="https://github.com/imranabash" id="gitHubLink" target="_blank"><i class="fab fa-github fa-3x" id="gitHubIcon" area-hidden="true"></i></a>
           <a href="https://twitter.com/imranabash" id="twitterLink" target="_blank"><i class="fab fa-twitter fa-3x" id="twitterIcon" area-hidden="true"></i></a>
         </div>
         <p id="email">Email: ranbash1@gmail.com</p>
